--- a/object1.html
+++ b/object1.html
@@ -31,6 +31,15 @@
 
         console.log(zeroho);
 
+        const zerocho = {
+            name: {
+                first: '수진',
+                last: '정'
+            },
+            gender: 'M'
+        };
+        console.log(zerocho.name.last);
+
     </script>
 </body>
 
