--- a/part2_3/index.html
+++ b/part2_3/index.html
@@ -8,7 +8,7 @@
     <title>끝말잇기 게임 </title>
     <link rel="shortcut icon" href="#" type="image/x-icon">
     <link rel="stylesheet" href="index.css">
-    <script src="index.js" defer></script>
+    <script src="index2.js" defer></script>
 </head>
 
 <body>
